crates/plotnik-tests/tests/02-parser/recovery_validation/negated_field_in_labeled_alternative.txt
Q = [
  Foo: -key
  Bar: (pair)
]
------------------ DIAGNOSTICS -------------------
error: negated grammar fields cannot appear directly in alternations
 --> query.ptk:2:8
  |
2 |   Foo: -key
  |        ^^^^
  |
help: negate the grammar field inside a node alternative: `[(a -field) (b)]`
